metadata/force-app/main/default/objects/X11_14test__c/fields/cehck1__c.field-meta.xml
<CustomField>
    <fullName>cehck1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>desc</description>
    <label>cehck1</label>
    <type>Checkbox</type>
</CustomField>