metadata/force-app/main/default/objects/X11_14test__c/fields/emailspers__c.field-meta.xml
<CustomField>
    <fullName>emailspers__c</fullName>
    <label>email pers</label>
    <type>Email</type>
</CustomField>