metadata/force-app/main/default/objects/X11_14test__c/fields/Random_description__c.field-meta.xml
<CustomField>
    <fullName>Random_description__c</fullName>
    <label>Random description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>