metadata/force-app/main/default/objects/X11_14test__c/recordTypes/recortype.recordType-meta.xml
<RecordType>
    <fullName>recortype</fullName>
    <active>true</active>
    <label>recortype</label>
</RecordType>