metadata/force-app/main/default/objects/X11_14test__c/validationRules/name_test.validationRule-meta.xml
<ValidationRule>
    <fullName>name_test</fullName>
    <active>true</active>
    <errorConditionFormula>Name  = &apos;%test%&apos;</errorConditionFormula>
    <errorMessage>name have test in it</errorMessage>
</ValidationRule>