metadata/force-app/main/default/objects/X11_14test__c/validationRules/validation1.validationRule-meta.xml
<ValidationRule>
    <fullName>validation1</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;1&apos;</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>