metadata/force-app/main/default/objects/X11_14test__c/listViews/Listveiw_AL.listView-meta.xml
<ListView>
    <fullName>Listveiw_AL</fullName>
    <columns>NAME</columns>
    <columns>checkbox__c</columns>
    <columns>cehck1__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Listveiw AL</label>
</ListView>